# Qt6ModBusSlave

./: .gitignore  CMakeLists.txt  FILE_REGISTER_UI.md  FileStore.cpp  FileStore.h  LICENSE  Main.qml  ModbusDataStore.cpp  ModbusDataStore.h  ModbusFunctionHandler.cpp  ModbusFunctionHandler.h  ModbusServer.cpp  ModbusServer.h  ModbusTypes.h  ModbusValueConverter.cpp  ModbusValueConverter.h  README.md  SensorConfigParser.cpp  SensorConfigParser.h  SensorItem.cpp  SensorItem.h  SensorModel.cpp  SensorModel.h  main.cpp  寄存器点表-设备控制.csv  需求.md
.github/workflows/: cmake-multi-platform.yml
docs/: C++ feature.md  Lambda.md  QUICKSTART.md  Qt_Reflection.md  RAII&RTTI.md  mutable.md  sensor_config_example.txt
